// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusLabel alignment when alignment prop set to "end" should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "hsl(109, 28%, 92%)",
        "borderRadius": 16,
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "flexWrap": "nowrap",
        "gap": 4,
        "justifyContent": "flex-end",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "hsl(109, 28%, 92%)",
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "flexShrink": 1,
        "marginBottom": -1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      selectable={true}
      selectionColor="hsl(86, 100%, 46%)"
      style={
        [
          {
            "fontFamily": "inter-medium",
          },
          {
            "color": "hsl(107, 64%, 16%)",
          },
          {
            "textAlign": "right",
          },
          {
            "fontSize": 12,
            "lineHeight": 18,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      End Aligned
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "hsl(107, 58%, 33%)",
          "borderRadius": 100,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "hsl(107, 58%, 33%)",
        },
      ]
    }
    testID="successIndicator"
  />
</View>
`;

exports[`StatusLabel alignment when alignment prop set to default ("start") should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "hsl(109, 28%, 92%)",
        "borderRadius": 16,
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "flexWrap": "nowrap",
        "gap": 4,
        "justifyContent": "flex-end",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "hsl(109, 28%, 92%)",
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "flexShrink": 1,
        "marginBottom": -1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      selectable={true}
      selectionColor="hsl(86, 100%, 46%)"
      style={
        [
          {
            "fontFamily": "inter-medium",
          },
          {
            "color": "hsl(107, 64%, 16%)",
          },
          {
            "textAlign": "right",
          },
          {
            "fontSize": 12,
            "lineHeight": 18,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      Start Aligned
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "hsl(107, 58%, 33%)",
          "borderRadius": 100,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "hsl(107, 58%, 33%)",
        },
      ]
    }
    testID="successIndicator"
  />
</View>
`;

exports[`StatusLabel status when status prop set to "critical" should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "hsl(109, 28%, 92%)",
        "borderRadius": 16,
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "flexWrap": "nowrap",
        "gap": 4,
        "justifyContent": "flex-end",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "hsl(7, 63%, 95%)",
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "flexShrink": 1,
        "marginBottom": -1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      selectable={true}
      selectionColor="hsl(86, 100%, 46%)"
      style={
        [
          {
            "fontFamily": "inter-medium",
          },
          {
            "color": "hsl(6, 100%, 24%)",
          },
          {
            "textAlign": "right",
          },
          {
            "fontSize": 12,
            "lineHeight": 18,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      Critical
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "hsl(107, 58%, 33%)",
          "borderRadius": 100,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "hsl(6, 64%, 51%)",
        },
      ]
    }
    testID="criticalIndicator"
  />
</View>
`;

exports[`StatusLabel status when status prop set to "inactive" should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "hsl(109, 28%, 92%)",
        "borderRadius": 16,
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "flexWrap": "nowrap",
        "gap": 4,
        "justifyContent": "flex-end",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "hsl(195, 12%, 94%)",
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "flexShrink": 1,
        "marginBottom": -1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      selectable={true}
      selectionColor="hsl(86, 100%, 46%)"
      style={
        [
          {
            "fontFamily": "inter-medium",
          },
          {
            "color": "hsl(197, 90%, 12%)",
          },
          {
            "textAlign": "right",
          },
          {
            "fontSize": 12,
            "lineHeight": 18,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      Inactive
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "hsl(107, 58%, 33%)",
          "borderRadius": 100,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "hsl(198, 25%, 33%)",
        },
      ]
    }
    testID="inactiveIndicator"
  />
</View>
`;

exports[`StatusLabel status when status prop set to "informative" should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "hsl(109, 28%, 92%)",
        "borderRadius": 16,
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "flexWrap": "nowrap",
        "gap": 4,
        "justifyContent": "flex-end",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "hsl(207, 87%, 94%)",
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "flexShrink": 1,
        "marginBottom": -1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      selectable={true}
      selectionColor="hsl(86, 100%, 46%)"
      style={
        [
          {
            "fontFamily": "inter-medium",
          },
          {
            "color": "hsl(207, 61%, 34%)",
          },
          {
            "textAlign": "right",
          },
          {
            "fontSize": 12,
            "lineHeight": 18,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      Informative
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "hsl(107, 58%, 33%)",
          "borderRadius": 100,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "hsl(207, 79%, 57%)",
        },
      ]
    }
    testID="informativeIndicator"
  />
</View>
`;

exports[`StatusLabel status when status prop set to "warning" should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "hsl(109, 28%, 92%)",
        "borderRadius": 16,
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "flexWrap": "nowrap",
        "gap": 4,
        "justifyContent": "flex-end",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "hsl(52, 64%, 89%)",
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "flexShrink": 1,
        "marginBottom": -1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      selectable={true}
      selectionColor="hsl(86, 100%, 46%)"
      style={
        [
          {
            "fontFamily": "inter-medium",
          },
          {
            "color": "hsl(51, 64%, 24%)",
          },
          {
            "textAlign": "right",
          },
          {
            "fontSize": 12,
            "lineHeight": 18,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      Warning
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "hsl(107, 58%, 33%)",
          "borderRadius": 100,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "hsl(51, 64%, 49%)",
        },
      ]
    }
    testID="warningIndicator"
  />
</View>
`;

exports[`StatusLabel status when status prop set to default ("success") should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "hsl(109, 28%, 92%)",
        "borderRadius": 16,
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 1,
        "flexWrap": "nowrap",
        "gap": 4,
        "justifyContent": "flex-end",
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
      {
        "backgroundColor": "hsl(109, 28%, 92%)",
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "flexShrink": 1,
        "marginBottom": -1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      selectable={true}
      selectionColor="hsl(86, 100%, 46%)"
      style={
        [
          {
            "fontFamily": "inter-medium",
          },
          {
            "color": "hsl(107, 64%, 16%)",
          },
          {
            "textAlign": "right",
          },
          {
            "fontSize": 12,
            "lineHeight": 18,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      Success
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "hsl(107, 58%, 33%)",
          "borderRadius": 100,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "hsl(107, 58%, 33%)",
        },
      ]
    }
    testID="successIndicator"
  />
</View>
`;
